--- a/MNIST_CNN.ipynb
+++ b/MNIST_CNN.ipynb
@@ -29,11 +29,11 @@
       "metadata": {
         "id": "9lPMLhoUat8E",
         "colab_type": "code",
+        "outputId": "35455abb-ee19-42ae-8363-fa4f2e79ba45",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "35455abb-ee19-42ae-8363-fa4f2e79ba45"
+        }
       },
       "source": [
         "# TensorFlowとそのデータセットライブラリのインポート\n",
@@ -46,7 +46,7 @@
         "import tensorflow as tf\n",
         "import tensorflow_datasets as tfds"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -62,6 +62,7 @@
       "metadata": {
         "id": "q75oodDEjTXA",
         "colab_type": "code",
+        "outputId": "1b7c072f-9a01-427f-f5d8-cfcf29641e70",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/colabwidgets/controls.css": {
@@ -79,15 +80,14 @@
           },
           "base_uri": "https://localhost:8080/",
           "height": 507
-        },
-        "outputId": "1b7c072f-9a01-427f-f5d8-cfcf29641e70"
+        }
       },
       "source": [
         "# データセットの指定と分割\n",
         "dataset = tfds.load('mnist', as_supervised=True)\n",
         "mnist_train, mnist_test = dataset['train'], dataset['test']"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -681,12 +681,12 @@
         "        self.conv = Conv2D(32, kernel_size=(3, 3), activation='relu', input_shape=(28,28,1)) # (28, 28, 1) -> (26, 26, 32)\n",
         "        # プーリング層 基本的に2*2\n",
         "        self.pooling = MaxPooling2D(pool_size=(2, 2)) # (26, 26, 32) -> (13, 13, 32)\n",
-        "        # ドロップアウト\n",
-        "        self.dropout = Dropout(0.25)\n",
         "        # 入力層をFlattenで宣言することで入力を一列にする\n",
-        "        self.flatten = Flatten() # (13, 13, 32) -> 24336\n",
+        "        self.flatten = Flatten() # (13, 13, 32) -> 5408\n",
         "        # 全結合層 ユニット数128（数は雰囲気で決めていい）\n",
-        "        self.d1 = Dense(128, activation = 'relu') # 24336 -> 128\n",
+        "        self.d1 = Dense(128, activation = 'relu') # 5408 -> 128\n",
+        "        # ドロップアウト 0.25の確率で不活性となる\n",
+        "        self.dropout = Dropout(0.25)　# 128 -> 128\n",
         "        # 全結合層 ユニット数10（0～9を一個ずつ）\n",
         "        self.d2 = Dense(10, activation = 'softmax') # 128 -> 10\n",
         "\n",
@@ -808,7 +808,7 @@
         "    template = 'Epoch {}, Loss: {}, Accuracy: {}, Test Loss: {}, Test Accuracy: {}'\n",
         "    print(template.format(epoch + 1, train_loss.result(), train_accuracy.result() * 100, test_loss.result(), test_accuracy.result() * 100))"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
